--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "grunt-contrib-jshint": "~0.10.0",
     "node-fs-extra": "^0.8.1",
     "express": "~4.10.0",
-    "express-debug": "~1.1.1",
     "fs-extra": "~0.12.0",
     "body-parser": "~1.9.2",
-    "serve-favicon": "~2.1.6"
+    "serve-favicon": "~2.1.6",
+    "debug": "~2.1.0"
   }
 }
