--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "~1.9.2",
     "serve-favicon": "~2.1.6",
     "debug": "~2.1.0",
-    "mongoskin": "~1.4.4"
+    "mongoskin": "~1.4.4",
+    "socket.io": "~1.2.1"
   }
 }
