--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serve-favicon": "~2.1.6",
     "debug": "~2.1.0",
     "mongoskin": "~1.4.4",
-    "socket.io": "~1.2.1"
+    "socket.io": "~1.2.1",
+    "node-mandrill": "~1.0.1"
   }
 }
