--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "body-parser": "~1.9.2",
     "serve-favicon": "~2.1.6",
     "debug": "~2.1.0",
-    "mongoskin": "~1.4.4",
+    "mongoskin": "~1.4.11",
     "socket.io": "~1.2.1",
+    "socketio-jwt": "~2.3.5",
     "node-mandrill": "~1.0.1",
-    "request": "~2.51.0"
+    "request": "~2.51.0",
+    "jsonwebtoken": "~3.2.2",
+    "mongodb": "~1.4.28"
   }
 }
